Fixed Background Image not showing
Caused due to the extra layer of folders separating the style from the images

--- a/style/default/base.css
+++ b/style/default/base.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 body {
-	background: #1A1A1A url("../images/background.png");
+	background: #1A1A1A url("../../images/background.png");
 	color: #D8D6DB;
 	font-family: 'Whitney Regular';
 }
