--- a/style/light/base.css
+++ b/style/light/base.css
@@ -1,5 +1,5 @@
 body {
-	background: #DDDDDD url("../images/background.jpg");
+	background: #DDDDDD url("../../images/background.jpg");
 	color: #272924;
 	font-family: 'Whitney Regular';
 }
